--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Three Star</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css\style.css">
-
+<link rel="stylesheet" href="css/style.css" type="text/css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body id="home">
   <!-- Navbar start -->
@@ -99,6 +99,18 @@
  </div>
  </section>
  <!-- services end -->
+
+ <!-- Our Vision-->
+ <section class="ourvision" id="ourvision">
+  <div class="container container-mobile">
+  <div class="col-2">
+  <h2>Our Vision</h2>
+     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan nisl et orci interdum, sit amet fringilla turpis egestas. Nullam luctus, justo quis mattis accumsan, mi nisl consectetur velit, et semper velit mauris eu odio.justo quis mattis accumsan, mi nisl consectetur velit, et semper velit mauris eu odio.</p>
+     <a href="">Learn More <i class="fa fa-play"></i></a>
+  </div>
+  </div>
+  </section>
+  <!-- Our Vision -->
  
   <!-- Team-->
  <section class="team" id="team">
